# openstack-ansible-os_blazar

./: .gitignore  .gitreview  CONTRIBUTING.rst  README.rst  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
defaults/: main.yml
doc/source/: conf.py
examples/: playbook.yml
handlers/: main.yml
meta/: main.yml
releasenotes/source/: index.rst
tasks/: blazar_apt_packages.yml  blazar_db_setup.yml  blazar_init.yml  blazar_init_common.yml  blazar_init_systemd.yml  blazar_init_upstart.yml  blazar_install.yml  blazar_post_install.yml  blazar_pre_install.yml  blazar_service_setup.yml  main.yml  mq_setup.yml
templates/: blazar-systemd-init.j2  blazar-systemd-tempfiles.j2  blazar-upstart-init.j2  blazar.conf.j2
tests/: ansible-role-requirements.yml  inventory  os_blazar-overrides.yml  test-blazar-functional.yml  test-install-blazar.yml  test-repo-clone.sh  test.yml  tests-repo-clone.sh
tests/group_vars/: all_containers.yml
tests/host_vars/: blazar1.yml  localhost.yml  openstack1.yml
vars/: debian.yml  main.yml  suse.yml  ubuntu-16.04.yml  ubuntu.yml
zuul.d/: jobs.yaml  project.yaml
