[metadata]
name = openstack-ansible-os_blazar
summary = os_blazar role for OpenStack-Ansible
description-file =
    README.rst
author = Taseer Ahmed
author-email = taseer94@gmail.com
home-page = https://docs.openstack.org/openstack-ansible-os_blazar/latest/
classifier =
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
